2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add ABC notation support.
	* class.abc.inc.php:
	New file.

2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	More precaution -- also make it fail if command returns
	succeed but didn't render any image.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add back mistakenly deleted plugin info.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* LICENSE: Add info.
	* wp-scorerender.php, class.scorerender.inc.php:
	Trivial change of variable and function names.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php:
	Tweak ImageMagick option so need not use getimagesize().

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php:
	Fix small typo that prevent guido support from working.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Really filters content/comment through guido_filter().

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Allows update of database structure.

2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add guido support.

2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php: New file.

2007-02-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop latex support. Now read and write configuration
	option as an array instead of 20+ independent values.
	Simpler(?) regex for tag matching.

	* class.*.php:
	Relevant variable changes.
	Copyright notices.

2007-02-16  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Rename parent class function name.
	* class.mup.inc.php, class.scorerender.inc.php:
	Don't set density anymore, tune staff size instead.

2007-02-16  Abel Cheung  <abelcheung@gmail.com>

	* class.mup.inc.php, class.lilypond.inc.php:
	Tune the staff size of mup and lilypond so they both
	output 16pt staves. Drop safe mode for lilypond,